--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </a>
                 <a href="mailto:contact@fit.com" class="contact-info">
                     <i class="fas fa-envelope"></i> 
-                    <span class="contact-text">irtajul2016.com</span>
+                    <span class="contact-text">irtajul2016@gmail.com</span>
                 </a>
             </div>
         </nav>
@@ -358,3 +358,4 @@
 </body>
 
 </html>
+
